# X3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  compile_shaders.sh  mkdocs.yml  quick_build.sh
.agent/workflows/: build_and_run.md
SampleModels/: model-credits.txt
X3/: CMakeLists.txt
X3-Editor/: CMakeLists.txt
X3-Editor/libs/icon-fonts-headers/: CMakeLists.txt  Codicons.h  X3BrandIcons.h
X3-Editor/libs/imgui-docking/: CMakeLists.txt  main.cpp
X3-Editor/libs/imgui-docking/docs/: BACKENDS.md
X3-Editor/libs/implot/: CMakeLists.txt
X3-Editor/res/: SampleLight.lrtheme  default_imgui.ini
X3-Editor/src/: EditorCfg.cpp  EditorCfg.h  EditorLayer.cpp  EditorLayer.h  EditorMain.cpp  EditorState.cpp  EditorState.h  EditorTheme.cpp  EditorTheme.h  ImGuiContext.cpp  ImGuiContext.h  ImGuiContextFontRegistry.h
X3-Editor/src/Dialogs/: ConfirmationDialog.h  FilePickerDialog.h  FolderPickerDialog.h
X3-Editor/src/Dialogs/ProjectDialogs/: ProjectDialogs.h
X3-Editor/src/Panels/: DNDPayloads.h  IEditorPanel.h
X3-Editor/src/Panels/AssetsPanel/: AssetsPanel.cpp  AssetsPanel.h
X3-Editor/src/Panels/ExportPanel/: ExportPanel.cpp  ExportPanel.h
X3-Editor/src/Panels/InspectorPanel/: InspectorPanel.cpp  InspectorPanel.h  TransformUI.h
X3-Editor/src/Panels/Launcher/: Launcher.cpp  Launcher.h
X3-Editor/src/Panels/ProfilerPanel/: ProfilerPanel.cpp  ProfilerPanel.h
X3-Editor/src/Panels/RenderSettingsPanel/: RenderSettingsPanel.cpp  RenderSettingsPanel.h
X3-Editor/src/Panels/SceneHierarchyPanel/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
X3-Editor/src/Panels/ThemePanel/: ThemePanel.cpp  ThemePanel.h
X3-Editor/src/Panels/ViewportPanel/: ViewportPanel.cpp  ViewportPanel.h
X3-Editor/src/Platform/Linux/Dialogs/: FilePickerDialog.h  FolderPickerDialog.h
X3-Editor/src/Platform/Windows/Dialogs/: FilePickerDialog.h  FolderPickerDialog.h
X3-Editor/src/WindowTitleBar/: WindowTitleBar.cpp  WindowTitleBar.h
X3-Runtime/: CMakeLists.txt
X3-Runtime/src/: RuntimeCfg.cpp  RuntimeCfg.h  RuntimeLayer.cpp  RuntimeLayer.h  RuntimeMain.cpp
X3/libs/entt/: CMakeLists.txt
X3/res/shaders/: PathTracing.comp
X3/src/: EngineCfg.cpp  EngineCfg.h  Laura.h  LauraEntrypoint.h  X3.h  X3Entrypoint.h  lrpch.cpp  lrpch.h
X3/src/Core/: GUID.cpp  GUID.h  IWindow.cpp  IWindow.h  Log.cpp  Log.h  Profiler.cpp  Profiler.h  application.cpp  application.h
X3/src/Core/Events/: IEvent.h  KeyEvents.h  MouseEvents.h  RenderEvents.h  WindowEvents.h
X3/src/Core/Layers/: ILayer.h  LayerStack.cpp  LayerStack.h  RenderLayer.cpp  RenderLayer.h
X3/src/Export/: ExportSettings.cpp  ExportSettings.h  ProjectExporter.cpp  ProjectExporter.h
X3/src/Platform/OpenGL/: OpenGLComputeShader.cpp  OpenGLComputeShader.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLImage2D.cpp  OpenGLImage2D.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShaderStorageBuffer.cpp  OpenGLShaderStorageBuffer.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLdebugFuncs.cpp  OpenGLdebugFuncs.h
X3/src/Platform/Windows/: GLFWWindow.cpp  GLFWWindow.h
X3/src/Project/: ProjectManager.cpp  ProjectManager.h  ProjectUtilities.h
X3/src/Project/Assets/: AssetManager.cpp  AssetManager.h  AssetTypes.h  BVHAccel.cpp  BVHAccel.h
X3/src/Project/Scene/: Components.cpp  Components.h  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
X3/src/Renderer/: IComputeShader.cpp  IComputeShader.h  IImage2D.cpp  IImage2D.h  IRendererAPI.cpp  IRendererAPI.h  IRenderingContext.cpp  IRenderingContext.h  IShaderStorageBuffer.cpp  IShaderStorageBuffer.h  ITexture2D.cpp  ITexture2D.h  IUniformBuffer.cpp  IUniformBuffer.h  RenderSettings.h  Renderer.cpp  Renderer.h
design/: palette.txt
docs/: architecture.md  index.md
examples/: woodeneye.c
examples/simple/: main.cpp
include/x3/: Camera.h  Engine.h  Input.h  Math.h  Resource.h  Scene.h  Shader.h
src/engine/: Engine.cpp  Input.cpp  Resource.cpp  Scene.cpp
src/shaders/: Basic.frag.hlsl  Basic.vert.hlsl
src/shaders/compiled/: Basic.frag.msl  Basic.frag.spv  Basic.vert.msl  Basic.vert.spv
